force-app/main/default/objects/Student01__c/Student01__c.object-meta.xml
<CustomObject>
    <label>Student01</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>students01</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>