force-app/main/default/objects/Student01__c/fields/annual_fees__c.field-meta.xml
<CustomField>
    <fullName>annual_fees__c</fullName>
    <label>annual_fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>