force-app/main/default/objects/Student01__c/fields/discount_fees__c.field-meta.xml
<CustomField>
    <fullName>discount_fees__c</fullName>
    <formula>IF( Age__c &gt;=23 &amp;&amp;  Age__c  &lt;25,  annual_fees__c * 0.50, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>discount fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>