force-app/main/default/objects/Student01__c/fields/Select_Department__c.field-meta.xml
<CustomField>
    <fullName>Select_Department__c</fullName>
    <label>Select Department</label>
    <referenceTo>management01__c</referenceTo>
    <relationshipLabel>students01</relationshipLabel>
    <relationshipName>students01</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>