force-app/main/default/objects/Student01__c/validationRules/age.validationRule-meta.xml
<ValidationRule>
    <fullName>age</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &gt; 25</errorConditionFormula>
    <errorMessage>You are not eligible to get admission</errorMessage>
</ValidationRule>